Fix several bugs discovered while testing #763
* Most UserManagement actions would attempt to act on CommunityUser if
  the user wasn't specified in the URL
* Likewise, editing request queues had the same issue
* Edit user from UserManagement had some form controls which didn't look
  read-only. One used `uneditable-input`, which was dropped with the
  Bootstrap migration. Another didn't have any form styling at all but
  is always readonly.
* (Soft-)deleting welcome templates did not update the record's
  updateversion, breaking collision detection for the non-deleter
* Fixing the above revealed that display of the error was broken because
  we redirected too early

--- a/resources/scss/_common.scss
+++ b/resources/scss/_common.scss
@@ -107,3 +107,7 @@ iframe.preview-frame {
         height: 30vh;
     }
 }
+
+.form-control.uneditable-input {
+    @extend .form-control[readonly]
+}
